--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.4",
     "openai": "^5.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
