feat: add supabase connection

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.1.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@supabase/supabase-js": "^2.52.1",
     "ai": "^4.3.16",
     "next": "15.3.4",
     "openai": "^5.8.2",
